--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>BonaEvents - Vacanze a Saranda | La perla dell'Albania</title>
+    <meta name="description" content="BonaEvents - Esplora pacchetti vacanza esclusivi a Saranda, Albania" />
+    <meta name="google" content="notranslate" id="notranslate" />
+    <meta name="google-translate-customization" content="3f88d5cbb415eb3d-facda5f7c9105964-gf46e39e7c22b2ea6-10" />
+    <title>BonaEvents - Pacchetti Vacanza a Saranda</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
