--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>BonaEvents - Pacchetti Vacanza a Saranda</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Kaushan+Script&display=swap" rel="stylesheet">
     <style>
       /* Reset CSS di base per garantire una visualizzazione coerente */
       html, body {
@@ -30,6 +30,11 @@
       img, svg, video, canvas, audio, iframe, embed, object {
         max-width: 100%;
         height: auto;
+      }
+
+      /* Stile per il font personalizzato */
+      .font-script {
+        font-family: 'Kaushan Script', cursive;
       }
     </style>
   </head>
